--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <a href="#">
-                    <img src="../img/cannis logo-13.png" alt="Logo cannis" class="img-fluid expand">
+                    <img src="./img/cannis logo-13.png" alt="Logo cannis" class="img-fluid expand">
                 </a>
             </div>
             <div class="col-md-6">
