--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                     Productos <i class="bi bi-chevron-down"></i>
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="/pages/Productos.html">Todos</a></li>
+                    <li><a class="dropdown-item" href="./pages/Productos.html">Todos</a></li>
                     <li><a class="dropdown-item" href="./pages/Gatos.html">Gatos</a></li>
                     <li><a class="dropdown-item" href="./pages/Perros.html">Perros</a></li>
                 </ul>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="pages/Nostros.html">Nosotros</a>
+                <a class="nav-link" href="./pages/Nostros.html">Nosotros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/pages/Contacto.html">Contacto</a>
+                <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
             </li>
             </ul>
             <form class="d-flex ms-auto">
