Versión con sass

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
+    <meta name="description" content="Cannis, comida para tu perro o gato a la puerta de tu casa. Hacemos envíos express a un precio incomparable">
+    <meta name="keywords" content="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nanum+Pen+Script&family=Platypi:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -16,7 +18,7 @@
     <header class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
         <a class="navbar-brand" href="#">
-            <img src="img/cannis logo-13.png" alt="Logo cannis" width="50">
+            <img src="img/cannis logo-13.png" alt="Logo cannis, petshop, comida para perros, comida para gatos" width="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -52,7 +54,7 @@
     </header>
     <div class="container-fluid main-content p-0 mt-0">
         <div class="rectangle">
-            <img src="img/entrega (3).png" alt="Envios gratis" class="rectangle-img">
+            <img src="img/entrega (3).png" alt="Envios, gratis, perro, comida, alimento, petshop" class="rectangle-img">
             <p>¡¡Envíos a la puerta de tu casa en 24hs!!</p>
         </div>
     </div>
@@ -60,7 +62,7 @@
         <div class="row">
             <div class="col-md-6">
                 <a href="./pages/Gatos.html" class="d-block mb-3 mb-md-0 position-relative overflow-hidden rounded">
-                <img src="img/cat-6593947_1280.jpg" alt="alimento para gatos" class="img-fluid w-100">
+                <img src="img/cat-6593947_1280.jpg" alt="alimento, gatos, envíos, petshop" class="img-fluid w-100">
                 <div class="overlay">
                     <p class="text-center text-white mb-0">Todo para gatos</p>
                 </div>
@@ -68,7 +70,7 @@
             </div>
             <div class="col-md-6">
                 <a href="./pages/Perros.html" class="d-block position-relative overflow-hidden rounded">
-                <img src="img/puppy-1903313_1280.jpg" alt="alimento para perros" class="img-fluid w-100">
+                <img src="img/puppy-1903313_1280.jpg" alt="alimento, perros, comida, a, domicilio" class="img-fluid w-100">
                 <div class="overlay">
                     <p class="text-center text-white mb-0">Todo para perros</p>
                 </div>
@@ -79,13 +81,13 @@
     <div class="fondo">
         <h2 class="marcas">Buscá por marcas</h2>
         <div class="top-images">
-            <img class="expand" src="img/royal.png" alt="Royal Canin">
-            <img class="expand" src="img/excellent2.png" alt="excellent purina">
+            <img class="expand" src="img/royal.png" alt="Royal, Canin, alimento, mascota">
+            <img class="expand" src="img/excellent2.png" alt="excellent, purina, alimento, mascota, comida, perro, gato">
         </div>
         <div class="bottom-images">
-            <img class="expand" src="img/proplan3.png" alt="proplan">
-            <img class="expand" src="img/oldprince.png" alt="old prince">
-            <img class="expand" src="img/eukanuba.png" alt="eukanuba">
+            <img class="expand" src="img/proplan3.png" alt="proplan, alimento, mascota, perro, gato">
+            <img class="expand" src="img/oldprince.png" alt="old prince, comida, perro, gato">
+            <img class="expand" src="img/eukanuba.png" alt="eukanuba, alimento, perro, gato, petshop">
         </div>
     </div>
     <div>
@@ -105,13 +107,13 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="d-flex justify-content-center align-items-center">
-                        <img src="img/sibuscabas.jpg" class="d-block img-fluid d-none d-lg-block" alt="Oferta alimento para mascotas" style="height: 600px;">
-                        <img src="img/sibuscabas2.jpg" class="d-block img-fluid d-lg-none" alt="Oferta alimento para mascotas" style="height: 850px;">
+                        <img src="img/sibuscabas.jpg" class="d-block img-fluid d-none d-lg-block" alt="Oferta, alimento, para, mascotas" style="height: 600px;">
+                        <img src="img/sibuscabas2.jpg" class="d-block img-fluid d-lg-none" alt="Oferta, alimento, para, perros, gatos" style="height: 850px;">
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="d-flex justify-content-center align-items-center">
-                        <img src="img/10OFF (2).png" class="d-block img-fluid" alt="Oferta alimento para mascotas" style="height: 600px;">
+                        <img src="img/10OFF (2).png" class="d-block img-fluid" alt="Oferta, comida, para, mascotas, perro, gato" style="height: 600px;">
                     </div>
                 </div>
             </div>
@@ -132,7 +134,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <a href="#">
-                    <img src="./img/cannis logo-13.png" alt="Logo cannis" class="img-fluid expand">
+                    <img src="./img/cannis logo-13.png" alt="Logo, cannis, petshop" class="img-fluid expand">
                 </a>
             </div>
             <div class="col-md-6">
