--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cannis, comida para tu perro o gato a la puerta de tu casa. Hacemos envíos express a un precio incomparable">
+    <meta name="keywords" content="ALimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal, canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato">
     <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
