--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cannis, comida para tu perro o gato a la puerta de tu casa. Hacemos envíos express a un precio incomparable">
+    <meta name="keywords" content="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal, canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato">
     <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -87,7 +89,7 @@
                 <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4">
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Proplan perro/PROPLAN-ADULTO-LARGE.png" class="card-img-top" alt="Proplan">
+                            <img src="../img/Proplan perro/PROPLAN-ADULTO-LARGE.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Proplan adulto raza grande 15kg</h6>
                                 <p class="card-text">$</p>
@@ -97,7 +99,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Proplan gatos/PROPLAN-KITTEN.png" class="card-img-top" alt="Proplan">
+                            <img src="../img/Proplan gatos/PROPLAN-KITTEN.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Proplan Kitten 3kg</h6>
                                 <p class="card-text">$</p>
@@ -107,7 +109,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent perro/EXCELLENT-ADULTO-MED-GDE-441x441-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent perro/EXCELLENT-ADULTO-MED-GDE-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent adulto raza grande 15kg</h6>
                                 <p class="card-text">$</p>
@@ -117,7 +119,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent gatos/Excellent-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent gatos/Excellent-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent gato adulto 15kg</h6>
                                 <p class="card-text">$</p>
@@ -127,7 +129,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent gatos/EXCELLENT-SKIN-CARE-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent gatos/EXCELLENT-SKIN-CARE-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent gato skin care 15kg</h6>
                                 <p class="card-text">$</p>
@@ -137,7 +139,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Eukanuba/euk-imagen-nueva-adul-med-ver-441x441-removebg-preview.png" class="card-img-top" alt="Eukanuba">
+                            <img src="../img/Eukanuba/euk-imagen-nueva-adul-med-ver-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Eukanuba</h6>
                                 <p class="card-text">$</p>
@@ -147,7 +149,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Old prince perro/OLD-PRINCE-PERRO-CORDERO-MED-GDE-ADULTO.png" class="card-img-top" alt="Old prince">
+                            <img src="../img/Old prince perro/OLD-PRINCE-PERRO-CORDERO-MED-GDE-ADULTO.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Old prince</h6>
                                 <p class="card-text">$</p>
@@ -157,7 +159,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Eukanuba/EUKANUBA-SENIOR-LARGE-OK-441x441-removebg-preview.png" class="card-img-top" alt="Eukanuba">
+                            <img src="../img/Eukanuba/EUKANUBA-SENIOR-LARGE-OK-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Eukanuba</h6>
                                 <p class="card-text">$</p>
@@ -167,7 +169,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Royal gato/ROYAL-GASTRO-GATO-e1668089064540-441x405-removebg-preview.png" class="card-img-top" alt="Royal canin">
+                            <img src="../img/Royal gato/ROYAL-GASTRO-GATO-e1668089064540-441x405-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Royal canin</h6>
                                 <p class="card-text">$</p>
@@ -177,7 +179,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Old prince gatos/OLD-PRINCE-CORDERO-GATO-ADULTO-441x441-removebg-preview.png" class="card-img-top" alt="Old prince">
+                            <img src="../img/Old prince gatos/OLD-PRINCE-CORDERO-GATO-ADULTO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Old prince</h6>
                                 <p class="card-text">$</p>
@@ -187,7 +189,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent perro/EXCELLENT-ADULTO-SMALL-441x441-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent perro/EXCELLENT-ADULTO-SMALL-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent</h6>
                                 <p class="card-text">$</p>
@@ -197,7 +199,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Proplan perro/PROPLAN-PUPPY-LARGE-441x441.png" class="card-img-top" alt="Proplan">
+                            <img src="../img/Proplan perro/PROPLAN-PUPPY-LARGE-441x441.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Proplan</h6>
                                 <p class="card-text">$</p>
@@ -207,7 +209,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Royal gato/Royal_gato-removebg-preview.png" class="card-img-top" alt="Royal canin">
+                            <img src="../img/Royal gato/Royal_gato-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Royal canin</h6>
                                 <p class="card-text">$</p>
@@ -217,7 +219,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Old prince perro/premium-cachorro-441x441-removebg-preview.png" class="card-img-top" alt="Old prince">
+                            <img src="../img/Old prince perro/premium-cachorro-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Old prince</h6>
                                 <p class="card-text">$</p>
@@ -227,7 +229,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent gatos/EXCELLENT-URINARY-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent gatos/EXCELLENT-URINARY-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent</h6>
                                 <p class="card-text">$</p>
@@ -263,7 +265,7 @@
         <div class="row align-items-center">
             <div class="col-md-6">
                 <a href="../index.html">
-                    <img src="../img/cannis logo-13.png" alt="Logo cannis" class="img-fluid expand">
+                    <img src="../img/cannis logo-13.png" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta" class="img-fluid expand">
                 </a>
             </div>
             <div class="col-md-6">
