--- a/pages/Gatos.html
+++ b/pages/Gatos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cannis, comida para tu perro o gato a la puerta de tu casa. Hacemos envíos express a un precio incomparable">
+    <meta name="keywords" content="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal, canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato">
     <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,7 +73,7 @@
                 <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4">
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Proplan gatos/PROPLAN-KITTEN.png" class="card-img-top" alt="Proplan">
+                            <img src="../img/Proplan gatos/PROPLAN-KITTEN.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Proplan Kitten 3kg</h6>
                                 <p class="card-text">$</p>
@@ -81,7 +83,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent gatos/Excellent-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent gatos/Excellent-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent gato adulto 15kg</h6>
                                 <p class="card-text">$</p>
@@ -91,7 +93,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent gatos/EXCELLENT-SKIN-CARE-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent gatos/EXCELLENT-SKIN-CARE-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent gato skin care 15kg</h6>
                                 <p class="card-text">$</p>
@@ -101,7 +103,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Royal gato/ROYAL-GASTRO-GATO-e1668089064540-441x405-removebg-preview.png" class="card-img-top" alt="Royal canin">
+                            <img src="../img/Royal gato/ROYAL-GASTRO-GATO-e1668089064540-441x405-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Royal canin</h6>
                                 <p class="card-text">$</p>
@@ -111,7 +113,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Old prince gatos/OLD-PRINCE-CORDERO-GATO-ADULTO-441x441-removebg-preview.png" class="card-img-top" alt="Old prince">
+                            <img src="../img/Old prince gatos/OLD-PRINCE-CORDERO-GATO-ADULTO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Old prince</h6>
                                 <p class="card-text">$</p>
@@ -121,7 +123,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Royal gato/Royal_gato-removebg-preview.png" class="card-img-top" alt="Royal canin">
+                            <img src="../img/Royal gato/Royal_gato-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Royal canin</h6>
                                 <p class="card-text">$</p>
@@ -131,7 +133,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent gatos/EXCELLENT-URINARY-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent gatos/EXCELLENT-URINARY-GATO-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent</h6>
                                 <p class="card-text">$</p>
