--- a/pages/Perros.html
+++ b/pages/Perros.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cannis, comida para tu perro o gato a la puerta de tu casa. Hacemos envíos express a un precio incomparable">
+    <meta name="keywords" content="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal, canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
     <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,7 +73,7 @@
                 <div class="row row-cols-1 row-cols-md-3 row-cols-xl-5 g-4">
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Proplan perro/PROPLAN-ADULTO-LARGE.png" class="card-img-top" alt="Proplan">
+                            <img src="../img/Proplan perro/PROPLAN-ADULTO-LARGE.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Proplan adulto raza grande 15kg</h6>
                                 <p class="card-text">$</p>
@@ -81,7 +83,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent perro/EXCELLENT-ADULTO-MED-GDE-441x441-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent perro/EXCELLENT-ADULTO-MED-GDE-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent adulto raza grande 15kg</h6>
                                 <p class="card-text">$</p>
@@ -91,7 +93,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Eukanuba/euk-imagen-nueva-adul-med-ver-441x441-removebg-preview.png" class="card-img-top" alt="Eukanuba">
+                            <img src="../img/Eukanuba/euk-imagen-nueva-adul-med-ver-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Eukanuba</h6>
                                 <p class="card-text">$</p>
@@ -101,7 +103,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Old prince perro/OLD-PRINCE-PERRO-CORDERO-MED-GDE-ADULTO.png" class="card-img-top" alt="Old prince">
+                            <img src="../img/Old prince perro/OLD-PRINCE-PERRO-CORDERO-MED-GDE-ADULTO.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Old prince</h6>
                                 <p class="card-text">$</p>
@@ -111,7 +113,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Eukanuba/EUKANUBA-SENIOR-LARGE-OK-441x441-removebg-preview.png" class="card-img-top" alt="Eukanuba">
+                            <img src="../img/Eukanuba/EUKANUBA-SENIOR-LARGE-OK-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Eukanuba</h6>
                                 <p class="card-text">$</p>
@@ -121,7 +123,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Excellent perro/EXCELLENT-ADULTO-SMALL-441x441-removebg-preview.png" class="card-img-top" alt="Excellent">
+                            <img src="../img/Excellent perro/EXCELLENT-ADULTO-SMALL-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Excellent</h6>
                                 <p class="card-text">$</p>
@@ -131,7 +133,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Proplan perro/PROPLAN-PUPPY-LARGE-441x441.png" class="card-img-top" alt="Proplan">
+                            <img src="../img/Proplan perro/PROPLAN-PUPPY-LARGE-441x441.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Proplan</h6>
                                 <p class="card-text">$</p>
@@ -141,7 +143,7 @@
                     </div>
                     <div class="col">
                         <div class="card expand">
-                            <img src="../img/Old prince perro/premium-cachorro-441x441-removebg-preview.png" class="card-img-top" alt="Old prince">
+                            <img src="../img/Old prince perro/premium-cachorro-441x441-removebg-preview.png" class="card-img-top" alt="Cannis, alimento, comida, perro, gato, envío, domicilio, puerta, casa, mascota, petshop, royal canin, delivery, eukanuba, proplan, purina, excellent, oldprince, precio, barato, oferta">
                             <div class="card-body">
                                 <h6 class="card-title">Old prince</h6>
                                 <p class="card-text">$</p>
